--- a/table.html
+++ b/table.html
@@ -11,14 +11,14 @@
 <body>
     <nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-dark">
         <div class="container-xl">
-          <a class="navbar-brand" href="#">Eu</a>
+          <a class="navbar-brand" href="index.html">Eu</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">table</a>
+                <a class="nav-link active" aria-current="page" href="table.html">table</a>
               </li>
               
             </ul>
@@ -31,6 +31,7 @@
               <h1>HTML table presentation</h1>
 
               <table class="table table-bordered table-responsive-md table-hover">
+                <caption>List of european region countries</caption>
                 <thead class="table-light">
                   <tr>
                     <th scope="col">Country</th>
@@ -44,7 +45,7 @@
                 </tbody>
               </table>
 
-              <p>List of european region countries</p>
+              
           </div>
       </main>
 
