--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
                       <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="table.html">table</a>
                       </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="cards.html">Cards</a>
+                      </li>
                       
                     </ul>
                     
