--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
                       <li class="nav-item">
                         <a class="nav-link" href="cards.html">Cards</a>
                       </li>
+                      <li class="nav-item">
+                        <a class="nav-link" href="geolocation.html">Geolocation</a>
+                      </li>
                       
                     </ul>
                     
