--- a/table.html
+++ b/table.html
@@ -23,6 +23,9 @@
               <li class="nav-item">
                 <a class="nav-link" href="cards.html">Cards</a>
               </li>
+              <li class="nav-item">
+                <a class="nav-link" href="geolocation.html">Geolocation</a>
+              </li>
               
             </ul>
             
